--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,607 @@
-streamlit==1.33.0
-pandas==2.2.1
-numpy==1.26.4
-plotly==5.21.0
-matplotlib==3.8.3
-scikit-learn==1.4.1.post1
+absl-py==2.1.0
+addict==2.4.0
+aiofiles==23.2.1
+aiohappyeyeballs==2.4.0
+aiohttp==3.10.5
+aiohttp-retry==2.8.3
+aiosignal==1.3.1
+alabaster==1.0.0
+alembic==1.13.2
+altair==5.3.0
+annotated-types==0.7.0
+anyio==3.7.1
+apache-airflow==2.10.2
+apache-airflow-providers-common-compat==1.2.0
+apache-airflow-providers-common-io==1.4.0
+apache-airflow-providers-common-sql==1.16.0
+apache-airflow-providers-fab==1.3.0
+apache-airflow-providers-ftp==3.11.0
+apache-airflow-providers-google==10.22.0
+apache-airflow-providers-http==4.13.0
+apache-airflow-providers-imap==3.7.0
+apache-airflow-providers-postgres==5.12.0
+apache-airflow-providers-smtp==1.8.0
+apache-airflow-providers-sqlite==3.9.0
+apispec==6.6.1
+argcomplete==3.5.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asgiref==3.8.1
+asttokens==2.4.1
+astunparse==1.6.3
+async-lru==2.0.4
+async-timeout==4.0.3
+asyncer==0.0.8
+attrs==24.2.0
+audioread==3.0.1
+autogen==0.8.2
+av==12.2.0
+awscli==1.32.108
+babel==2.16.0
+backoff==2.2.1
+backports.functools-lru-cache==2.0.0
+backports.tarfile==1.2.0
+basicsr==1.4.2
+beautifulsoup4==4.12.3
+black==23.9.1
+bleach==6.1.0
+blinker==1.8.2
+blis==1.0.1
+boto3==1.34.108
+botocore==1.34.108
+build==1.2.2
+CacheControl==0.14.0
+cachelib==0.9.0
+cachetools==5.5.0
+catalogue==2.0.10
+cattrs==24.1.1
+certifi==2024.8.30
+cffi==1.17.1
+channels==4.2.0
+chardet==5.2.0
+charset-normalizer==3.3.2
+cleo==2.1.0
+click==8.1.7
+clickclick==20.10.2
+cloudpathlib==0.20.0
+cmake==3.30.5
+colorama==0.4.6
+colorlog==6.8.2
+comm==0.2.2
+confection==0.1.5
+ConfigUpdater==3.2
+connexion==2.14.2
+contourpy==1.2.1
+crashtest==0.4.1
+cron-descriptor==1.4.5
+croniter==3.0.3
+cryptography==42.0.8
+cvzone==1.6.1
+cycler==0.10.0
+cymem==2.0.10
+dataclasses==0.6
+dataclasses-json==0.5.14
+db-dtypes==1.3.0
+debugpy==1.8.1
+decorator==5.1.1
+defusedxml==0.7.1
+Deprecated==1.2.14
+dill==0.3.1.1
+diskcache==5.6.3
+distlib==0.3.8
+distro==1.9.0
+Django==4.2.7
+django-cors-headers==4.3.1
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.0
+dlib==19.24.6
+dnspython==2.6.1
+docker==7.0.0
+docstring_parser==0.16
+docutils==0.21.2
+drf-yasg==1.21.7
+dulwich==0.21.7
+easyocr==1.7.2
+ecdsa==0.19.0
+email_validator==2.2.0
+en_core_web_lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl#sha256=293e9547a655b25499198ab15a525b05b9407a75f10255e405e8c3854329ab63
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
+exceptiongroup==1.2.2
+executing==2.0.1
+face-alignment==1.3.5
+facexlib==0.3.0
+fastapi==0.115.11
+fastjsonschema==2.19.1
+ffmpy==0.5.0
+filelock==3.14.0
+filterpy==1.4.5
+fire==0.6.0
+firebase==4.0.1
+flake8==6.1.0
+Flask==2.3.3
+Flask-AppBuilder==4.5.0
+Flask-Babel==2.0.0
+Flask-Caching==2.3.0
+Flask-Cors==4.0.1
+Flask-JWT-Extended==4.6.0
+Flask-Limiter==3.8.0
+Flask-Login==0.6.3
+Flask-Mail==0.10.0
+Flask-MySQLdb==2.0.0
+Flask-Session==0.5.0
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.2.1
+flatbuffers==24.3.25
+fonttools==4.51.0
+fqdn==1.5.1
+frozendict==2.4.6
+frozenlist==1.4.1
+fsspec==2024.9.0
+future==1.0.0
+fuzzywuzzy==0.18.0
+gast==0.4.0
+gcloud-aio-auth==5.3.2
+gcloud-aio-bigquery==7.1.0
+gcloud-aio-storage==9.3.0
+gcsfs==2024.9.0.post1
+gfpgan==1.3.8
+gitdb==4.0.11
+GitPython==3.1.43
+google-ads==25.0.0
+google-analytics-admin==0.23.0
+google-api-core==2.19.2
+google-api-python-client==2.145.0
+google-auth==2.34.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.0.0
+google-cloud-aiplatform==1.66.0
+google-cloud-appengine-logging==1.4.5
+google-cloud-audit-log==0.3.0
+google-cloud-automl==2.13.5
+google-cloud-batch==0.17.27
+google-cloud-bigquery==3.20.1
+google-cloud-bigquery-datatransfer==3.15.7
+google-cloud-bigtable==2.26.0
+google-cloud-build==3.24.2
+google-cloud-compute==1.19.2
+google-cloud-container==2.51.0
+google-cloud-core==2.4.1
+google-cloud-datacatalog==3.20.1
+google-cloud-dataflow-client==0.8.12
+google-cloud-dataform==0.5.11
+google-cloud-dataplex==2.2.2
+google-cloud-dataproc==5.11.0
+google-cloud-dataproc-metastore==1.15.5
+google-cloud-dlp==3.22.0
+google-cloud-kms==2.24.2
+google-cloud-language==2.14.0
+google-cloud-logging==3.11.2
+google-cloud-memcache==1.9.5
+google-cloud-monitoring==2.22.2
+google-cloud-orchestration-airflow==1.13.1
+google-cloud-os-login==2.14.6
+google-cloud-pubsub==2.23.1
+google-cloud-redis==2.15.5
+google-cloud-resource-manager==1.12.5
+google-cloud-run==0.10.8
+google-cloud-secret-manager==2.20.2
+google-cloud-spanner==3.49.1
+google-cloud-speech==2.27.0
+google-cloud-storage==2.18.2
+google-cloud-storage-transfer==1.12.0
+google-cloud-tasks==2.16.5
+google-cloud-texttospeech==2.17.2
+google-cloud-translate==3.16.0
+google-cloud-videointelligence==2.13.5
+google-cloud-vision==3.7.4
+google-cloud-workflows==1.14.5
+google-crc32c==1.6.0
+google-pasta==0.2.0
+google-re2==1.1.20240702
+google-resumable-media==2.7.2
+googleapis-common-protos==1.65.0
+gradio==5.23.2
+gradio_client==1.8.0
+greenlet==3.1.0
+groovy==0.1.2
+grpc-google-iam-v1==0.13.1
+grpc-interceptor==0.15.4
+grpcio==1.70.0
+grpcio-gcp==0.2.2
+grpcio-status==1.62.3
+grpcio-tools==1.70.0
+gunicorn==23.0.0
+h11==0.14.0
+h2==4.2.0
+h5py==3.11.0
+hpack==4.1.0
+httpcore==1.0.5
+httplib2==0.22.0
+httptools==0.6.4
+httpx==0.28.1
+httpx-sse==0.4.0
+huggingface-hub==0.29.1
+hyperframe==6.1.0
+idna==3.10
+imageio==2.19.3
+imageio-ffmpeg==0.4.7
+imagesize==1.4.1
+imblearn==0.0
+imgaug==0.4.0
+importlib-metadata==6.11.0
+importlib_resources==6.4.5
+indic-nlp-library==0.92
+indic-transliteration==2.3.69
+inflection==0.5.1
+iniconfig==2.0.0
+installer==0.7.0
+instaloader==4.14.1
+intel-openmp==2021.4.0
+ipykernel==6.29.5
+ipython==8.24.0
+ipywidgets==8.1.5
+isoduration==20.11.0
+itsdangerous==2.2.0
+jaraco.classes==3.4.0
+jaraco.context==5.3.0
+jax==0.4.30
+jaxlib==0.4.30
+jedi==0.19.1
+Jinja2==3.1.4
+jiter==0.8.2
+jmespath==0.10.0
+joblib==1.1.0
+json-merge-patch==0.2
+json5==0.9.25
+jsonpatch==1.33
+jsonpointer==2.4
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
+jupyter==1.1.1
+jupyter-console==6.6.3
+jupyter-events==0.10.0
+jupyter-lsp==2.2.5
+jupyter_client==8.6.2
+jupyter_core==5.7.2
+jupyter_server==2.14.0
+jupyter_server_terminals==0.5.3
+jupyterlab==4.2.6
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.1
+jupyterlab_widgets==3.0.13
+keras==2.12.0
+keyring==8.7
+keyrings.alt==5.0.1
+kiwisolver==1.4.5
+kornia==0.6.8
+langchain==0.3.19
+langchain-community==0.3.18
+langchain-core==0.3.40
+langchain-openai==0.1.25
+langchain-text-splitters==0.3.6
+langcodes==3.5.0
+langgraph==0.3.2
+langgraph-checkpoint==2.0.16
+langgraph-prebuilt==0.1.1
+langgraph-sdk==0.1.53
+langsmith==0.1.147
+language_data==1.3.0
+language_tool_python==2.9.0
+lapx==0.5.9.post1
+lazy-object-proxy==1.10.0
+lazy_loader==0.4
+libclang==18.1.1
+librosa==0.9.2
+limits==3.13.0
+linkify-it-py==2.0.3
+llvmlite==0.43.0
+lmdb==1.6.2
+lockfile==0.12.2
+looker-sdk==24.16.1
+lxml==5.1.0
+Mako==1.3.5
+marisa-trie==1.2.1
+Markdown==3.6
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+marshmallow==3.22.0
+marshmallow-oneofschema==3.1.1
+marshmallow-sqlalchemy==0.28.2
+matplotlib==3.10.1
+matplotlib-inline==0.1.7
+mccabe==0.7.0
+mdit-py-plugins==0.4.2
+mdurl==0.1.2
+mediapipe==0.10.5
+methodtools==0.4.7
+mistune==3.0.2
+mkl==2021.4.0
+ml-dtypes==0.4.1
+molesq==0.4.0
+more-itertools==10.5.0
+Morfessor==2.0.6
+morphops==0.1.13
+mpmath==1.3.0
+msgpack==1.1.0
+multidict==6.1.0
+multitasking==0.0.11
+murmurhash==1.0.11
+mypy-extensions==1.0.0
+mysql==0.0.3
+mysql-connector-python==8.4.0
+mysqlclient==2.2.4
+namex==0.0.8
+narwhals==1.34.0
+nbclient==0.7.4
+nbconvert==7.16.4
+nbformat==5.10.4
+nest-asyncio==1.6.0
+networkx==3.3
+ninja==1.11.1.3
+nltk==3.9.1
+notebook==7.2.2
+notebook_shim==0.2.4
+numba==0.60.0
+numexpr==2.10.2
+numpy==1.23.4
+oauthlib==3.2.2
+onnx==1.17.0
+onnx-tf==1.10.0
+openai==1.66.3
+openai-whisper==20240930
+openapi-schema-pydantic==1.2.4
+opencv-contrib-python==4.10.0.84
+opencv-python==4.5.5.64
+opencv-python-headless==4.8.0.74
+opentelemetry-api==1.27.0
+opentelemetry-exporter-otlp==1.27.0
+opentelemetry-exporter-otlp-proto-common==1.27.0
+opentelemetry-exporter-otlp-proto-grpc==1.27.0
+opentelemetry-exporter-otlp-proto-http==1.27.0
+opentelemetry-proto==1.27.0
+opentelemetry-sdk==1.27.0
+opentelemetry-semantic-conventions==0.48b0
+opt-einsum==3.3.0
+optree==0.11.0
+ordered-set==4.1.0
+orjson==3.10.15
+overrides==7.7.0
+packaging==24.1
+pandas==2.2.2
+pandas-gbq==0.23.1
+pandocfilters==1.5.1
+parso==0.8.4
+pathlib==1.0.1
+pathspec==0.12.1
+pdf2image==1.17.0
+peewee==3.17.9
+pendulum==3.0.0
+pexpect==4.9.0
+Pillow==9.5.0
+pipenv==2024.4.1
+pkginfo==1.11.1
+platformdirs==4.2.1
+plotly==6.0.1
+pluggy==1.5.0
+poetry==1.8.3
+poetry-core==1.9.0
+poetry-plugin-export==1.8.0
+pooch==1.8.2
+portalocker==2.10.1
+preshed==3.0.9
+prison==0.2.1
+prometheus_client==0.20.0
+prompt-toolkit==3.0.43
+proto-plus==1.24.0
+protobuf==3.20.3
+psutil==6.0.0
+psycopg2-binary==2.9.9
+ptyprocess==0.7.0
+pure-eval==0.2.2
+py-cpuinfo==9.0.0
+py4j==0.10.9.7
+pyarrow==16.1.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.0
+PyAudio==0.2.14
+pyautogen==0.8.2
+pybboxes==0.1.6
+pyclipper==1.3.0.post6
+pycodestyle==2.11.1
+pycparser==2.22
+pydantic==2.10.6
+pydantic-settings==2.8.1
+pydantic_core==2.27.2
+pydata-google-auth==1.8.2
+pydeck==0.9.1
+pydub==0.25.1
+pyflakes==3.1.0
+pygame==2.6.1
+pygit2==1.15.1
+Pygments==2.18.0
+PyJWT==2.9.0
+pymongo==4.10.1
+PyMySQL==1.1.1
+pyOpenSSL==24.2.1
+pyparsing==3.1.4
+PyPDF2==3.0.1
+pyproject_hooks==1.1.0
+pyspark==3.5.5
+pyspellchecker==0.8.2
+pytesseract==0.3.10
+pytest==7.4.2
+pytest-django==4.7.0
+python-arango==8.1.4
+python-bidi==0.6.6
+python-daemon==3.0.1
+python-dateutil==2.9.0.post0
+python-docx==1.1.0
+python-dotenv==1.0.0
+python-jose==3.3.0
+python-json-logger==2.0.7
+python-magic==0.4.27
+python-multipart==0.0.20
+python-nvd3==0.16.0
+python-slugify==8.0.4
+pytorchyolo==1.8.0
+pytz==2024.2
+PyWavelets==1.8.0
+pywin32==306
+pywin32-ctypes==0.2.2
+pywinpty==2.0.13
+PyYAML==6.0.2
+pyzmq==26.0.3
+qdrant-client==1.3.1
+QtPy==2.4.1
+rapidfuzz==3.9.7
+referencing==0.35.1
+regex==2024.11.6
+requests==2.32.3
+requests-oauthlib==1.3.1
+requests-toolbelt==1.0.0
+resampy==0.3.1
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==13.8.1
+rich-argparse==1.5.2
+roboflow==1.1.29
+roman==5.0
+rpds-py==0.20.0
+rsa==4.7.2
+ruamel.yaml==0.18.6
+ruamel.yaml.clib==0.2.8
+ruff==0.11.2
+s3transfer==0.10.1
+safehttpx==0.1.6
+safetensors==0.5.2
+sahi==0.11.15
+scikit-image==0.19.3
+scikit-learn==1.1.3
+scipy==1.10.1
 seaborn==0.13.2
+semantic-version==2.10.0
+Send2Trash==1.8.3
+sentence-transformers==2.2.2
+sentencepiece==0.2.0
+sentry-sdk==2.20.0
+setproctitle==1.3.3
+shapely==2.0.6
+shellingham==1.5.4
+six==1.16.0
+sklearn-compat==0.1.3
+smart-open==7.0.5
+smmap==5.0.1
+sniffio==1.3.1
+snowballstemmer==2.2.0
+sounddevice==0.4.7
+soundfile==0.13.1
+soupsieve==2.5
+spacy==3.8.2
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+Sphinx==8.1.3
+sphinx-argparse==0.5.2
+sphinx-rtd-theme==3.0.2
+sphinxcontrib-applehelp==2.0.0
+sphinxcontrib-devhelp==2.0.0
+sphinxcontrib-htmlhelp==2.1.0
+sphinxcontrib-jquery==4.1
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==2.0.0
+sphinxcontrib-serializinghtml==2.0.0
+SQLAlchemy==1.4.54
+sqlalchemy-bigquery==1.11.0
+SQLAlchemy-JSONField==1.0.2
+sqlalchemy-spanner==1.7.0
+SQLAlchemy-Utils==0.41.2
+sqlparse==0.5.1
+srsly==2.4.8
+stack-data==0.6.3
+starlette==0.46.0
+streamlit==1.42.2
+sympy==1.12
+tabulate==0.9.0
+tavily-python==0.5.1
+tb-nightly==2.20.0a20250401
+tbb==2021.12.0
+tenacity==8.5.0
+tensorboard==2.12.3
+tensorboard-data-server==0.7.2
+tensorflow==2.12.0
+tensorflow-addons==0.22.0
+tensorflow-estimator==2.12.0
+tensorflow-hub==0.16.1
+tensorflow-intel==2.12.0
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==2.4.0
+terminado==0.18.1
+terminaltables==3.1.10
+text-unidecode==1.3
+tf_keras==2.18.0
+thinc==8.3.2
+thop==0.1.1.post2209072238
+threadpoolctl==3.6.0
+tifffile==2024.8.30
+tiktoken==0.9.0
+time-machine==2.15.0
+tinycss2==1.3.0
+tk==0.1.0
+tokenizers==0.13.3
+toml==0.10.2
+tomli==2.0.1
+tomlkit==0.13.2
+toolz==1.0.0
+torch==2.0.1
+torch-geometric==2.6.1
+torchaudio==2.3.0
+torchsummary==1.5.1
+torchvision==0.15.2
+tornado==6.4
+tqdm==4.66.4
+traitlets==5.14.3
+transformers==4.30.2
+trove-classifiers==2024.9.12
+twilio==9.3.2
+typeguard==2.13.3
+typer==0.15.0
+types-python-dateutil==2.9.0.20240316
+typing-inspect==0.9.0
+typing_extensions==4.12.2
+tzdata==2024.1
+uc-micro-py==1.0.3
+ultralytics==8.3.39
+ultralytics-thop==2.0.12
+unicodecsv==0.14.1
+universal_pathlib==0.2.5
+uri-template==1.3.0
+uritemplate==4.1.1
+urllib3==1.26.20
+uvicorn==0.21.1
+virtualenv==20.26.4
+voila==0.5.6
+voluptuous==0.14.2
+wasabi==1.1.3
+watchdog==6.0.0
+watchfiles==1.0.4
+wcwidth==0.2.13
+weasel==0.4.1
+webcolors==24.11.1
+webencodings==0.5.1
+websocket-client==1.8.0
+websockets==12.0
+Werkzeug==3.1.3
+widgetsnbextension==4.0.13
+wirerope==0.4.7
+wrapt==1.14.1
+WTForms==3.1.2
+xform==0.1.0
+yacs==0.1.8
+yapf==0.43.0
+yarl==1.11.1
+yfinance==0.2.54
+yolo==0.3.1
+yolov5==7.0.13
+yolov8==0.0.2
+zipp==3.20.2
+zstandard==0.23.0
